--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -7,16 +7,6 @@
     android:background="@color/white"
     tools:context=".PaymentMethodActivity">
 
-    <ImageButton
-        android:id="@+id/homeButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:srcCompat="@drawable/home" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -43,7 +33,7 @@
         android:fontFamily="sans-serif-black"
         android:text="Pay on Delivery/Cash on Delivery"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeButton" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView4"
