--- a/app/src/main/res/layout/activity_order_page.xml
+++ b/app/src/main/res/layout/activity_order_page.xml
@@ -29,7 +29,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="15dp"
                 android:fontFamily="@font/actor"
-                android:text="THE CART IS EMPTY"
+                android:text="YOUR CART IS EMPTY"
                 android:textColor="#000000"
                 android:textSize="25sp"
                 app:layout_constraintStart_toStartOf="parent"
