--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/editTextEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter Your Email Address"
+                android:hint="@string/enter_your_email_address"
                 android:inputType="textEmailAddress"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
